Bugfix: remove x axis scroll bar
Uses overflow-x: property to hide content outside box and removes the
x-axis scroll bar.

http://www.smartsell.nl/css-no-scrollbar/

--- a/css/this.css
+++ b/css/this.css
@@ -1,4 +1,8 @@
 /* Base Styles */
+html {
+overflow-x: hidden;
+
+}
 
 body {
     background-color: white;
@@ -13,6 +17,7 @@ ul, ol, li {
 
 section {
     border-top: 1px solid #ddd;
+
 }
 
 /* typography */
@@ -83,6 +88,11 @@ h3 + p {
 
 li > h3 {
   margin-bottom: 10px;
+
+}
+
+section > h2 {
+background-color: #F09D06;
 
 }
 
